# tg_series_temporais_otimizacao_gerenciamento_energia

./: LICENSE  app.py  main.py  pyproject.toml  requirements.txt
src/: .gitignore  1_PROCESSING_GHCN_Daily.ipynb  2_MODEL_GHCN_Daily.ipynb  DESCRIBE_GHCN_Daily.ipynb  DESCRIBE_GHCN_Monthly.ipynb  GHCN_DAILY_WEATHER_DATA.ipynb  app.py  main.py
src/app_pages/: datasets.py  datasets_ghcn.py  datasets_inmet.py  forecasts.py
src/config_app/: .secrets.toml  config_app.py  settings.toml
src/data enrichment/: GET_INFORMATIONS_STATIONS.ipynb
src/data/1_GET_DATA/: GHCN_DAILY_WEATHER_DATA.ipynb  data_brazil_daily.csv
src/data/2_DATA_STATIONS_ENRICHMENT/: GET_INFORMATIONS_STATIONS.ipynb  data_station_with_result_api.xlsx
src/data/3_PRE_PROCESSING_DATASET_GHCN_DAILY/: .gitattributes
src/data/DATA_STATIONS/: data_station.csv
src/data/profilings/: profiling_ghcn_daily.html  profiling_ghcn_daily_stations.html
src/get_data/: GHCN_DAILY_WEATHER_DATA.ipynb
src/models/: MODEL_PROPHET.ipynb
src/profilings/: profiling_ghcn_daily.html  profiling_ghcn_daily_group_freq_month.html
src/styles/: style.css
src/utils/: config_dataframe_explorer.py  dataframe_explorer.py  generic_functions.py  pandas_functions.py  statistics_functions.py  streamlit_functions.py
src/utils/graphs/: graphs_datasets.py  time_series_analysis.py
src/utils/map/: map_app.py  map_functions.py  test_map.py
